# c_graphics_learn

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  build.sh
src/: camera.h  color.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  ray.h  rt_utility.h  sphere.cpp  sphere.h  vec3.h
